# mdtomd

./: .gitignore  MANIFEST.in  README.md  config.yaml  env.example  llm-prices.md  pyproject.toml  requirements.txt  计划书.md
examples/: big.md  big_zh.md  doc1.md  doc1_zh.md  sample.md  sample.mdx
examples/test/: doc2.md
mdtomd/: __init__.py  cli.py  markdown.py  options.py  paths.py  pricing.py  reporting.py  token_count.py  translator.py
mdtomd/config/: __init__.py  loader.py  schema.py  simple_yaml.py
mdtomd/llm/: __init__.py  client.py  providers.py
scripts/: build_cli.sh  install_cli.ps1  install_cli.sh  publish_cli.sh
tests/: test_cli.py  test_config.py  test_llm.py  test_options.py  test_pricing.py  test_translator.py
vscode-extension/: .vscodeignore  README.md  extension.js  package.json  使用说明.md
vscode-extension/lib/: shared.js  simpleYaml.js
vscode-extension/test/: shared.test.js
