[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtomd"
version = "0.1.1"
description = "Markdown/MDX translation CLI"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["markdown", "mdx", "translation", "llm"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "openai>=1.75,<2",
    "tiktoken>=0.8,<1",
]

[project.scripts]
mdtomd = "mdtomd.cli:main"

[tool.setuptools.packages.find]
include = ["mdtomd*"]
