[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mdtomd"
version = "0.1.3"
description = "Markdown and MDX translation CLI with token estimation"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "ailuntz", email = "ailuntz@icloud.com" },
]
maintainers = [
    { name = "ailuntz", email = "ailuntz@icloud.com" },
]
keywords = ["markdown", "mdx", "translation", "llm"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "openai>=1.75,<2",
    "tiktoken>=0.8,<1",
]

[project.urls]
Homepage = "https://github.com/ailuntx/mdtomd"
Repository = "https://github.com/ailuntx/mdtomd"
Source = "https://github.com/ailuntx/mdtomd"

[project.scripts]
mdtomd = "mdtomd.cli:main"

[tool.setuptools.packages.find]
include = ["mdtomd*"]
